Removed the classes (plant)-description and changed it to .(plant) AND .description for more flexibility (e.g .barberry AND .description) Used .description to give each item a width of 200px, and a flex-flow of row wrap. Added box-sizing: border-box to <body> to make sure all items had exactly 200px width. The result now matches the desired-outcome.

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -2,9 +2,14 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.text {
+  font-size: 14px;
+}
+
 img {
   width: 100px;
-  height: 100px;
+  height: auto;
+  margin: auto;
 }
 
 .title {
@@ -19,6 +24,12 @@ img {
   justify-content: center;
   flex-flow: row wrap;
   gap: 52px;
+}
+
+.description {
+  display: flex;
+  justify-content: center;
+  flex-flow: column wrap;
 }
 
 /* do not edit this footer */
